--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Cli application to manage a company's information in a database",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "start": "node index.js"
   },
   "keywords": [
     "pg",
